# snake-rust

./: Cargo.toml  Config.toml  README.md
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml
src/: board.rs  board_controller.rs  board_view.rs  config.rs  food.rs  game_mode.rs  main.rs  portal.rs  score.rs  snake.rs
