[package]
name = "snake-rust"
version = "0.6.0"
edition = "2018"
authors = ["martin.fontana@spacefoot.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8.1"
gfx_device_gl = "0.16.2"
piston_window = "0.116.0"
rand = "0.8.2"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
